[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/MainScenes/Menu/LoginScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UIElements/Image/Background Map.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/Music/ambient-piano-amp-strings-10711.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/MainScenes/Menu/ServersSelection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UIElements/Image/Translate Icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/UIElements/Image/Hover Translate Icon.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainScenes/Menu/Translator.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fonts/CaviarDreams/CaviarDreams_Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/UIElements/Image/ES Flag.png" type="Texture" id=9]
[ext_resource path="res://Assets/UIElements/Image/EN Flag.png" type="Texture" id=10]
[ext_resource path="res://Assets/UIElements/Image/Music Icon Normal.png" type="Texture" id=11]
[ext_resource path="res://Scenes/MainScenes/Menu/AudioButton.gd" type="Script" id=12]
[ext_resource path="res://Assets/UIElements/Image/Music Icon Pressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/UIElements/Image/Music Icon Hover.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 8 )

[node name="MainMenu" type="Node"]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginScreen" parent="." instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="ServersSelection" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="TranslatorButton" type="TextureButton" parent="."]
anchor_left = 0.951
anchor_top = 0.083
anchor_right = 0.951
anchor_bottom = 0.083
margin_left = -19.824
margin_top = -19.8
margin_right = 20.176
margin_bottom = 20.2
rect_min_size = Vector2( 40, 40 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslatortemList" type="ItemList" parent="TranslatorButton"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 0.943878
margin_right = 20.0
margin_bottom = 80.9439
rect_min_size = Vector2( 180, 95 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
items = [ "Espa√±ol", ExtResource( 9 ), false, "English", ExtResource( 10 ), false ]
icon_scale = 0.6
fixed_icon_size = Vector2( 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="TextureButton" parent="."]
anchor_left = 0.953691
anchor_top = 0.207874
anchor_right = 0.953691
anchor_bottom = 0.207874
margin_left = -25.9621
margin_top = -25.6613
margin_right = 486.038
margin_bottom = 486.339
rect_scale = Vector2( 0.1, 0.1 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioButton"]
stream = ExtResource( 3 )
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="TranslatorButton" to="TranslatorButton" method="_on_TextureButton_pressed"]
[connection signal="item_selected" from="TranslatorButton/TranslatortemList" to="TranslatorButton" method="_on_ItemList_item_selected"]
[connection signal="pressed" from="AudioButton" to="AudioButton" method="_on_AudioButton_pressed"]
[connection signal="finished" from="AudioButton/AudioStreamPlayer" to="AudioButton" method="_on_AudioStreamPlayer_finished"]
